# OpenSourceCLI

./: .gitignore  README.md  config.example.yaml  pyproject.toml
cli/: package-lock.json  package.json  tsconfig.json
cli/src/: index.tsx  python.ts  rpc.ts
cli/src/components/: App.tsx  MessageList.tsx  ToolCall.tsx
docs/superpowers/plans/: 2026-06-17-shaw-phase1-mvp.md
docs/superpowers/specs/: 2026-06-17-shaw-cli-design.md
scripts/: setup.sh
shaw/: __init__.py  __main__.py  config.py  engine.py  harness.py  protocol.py  provider.py  session.py  skills.py
shaw/providers/: __init__.py  anthropic.py  mock.py
shaw/tools/: __init__.py  bash.py  edit.py  glob.py  grep.py  read.py  registry.py  webfetch.py  write.py
skills/: brainstorm.yaml  code-review.yaml  tdd.yaml
tests/: test_config.py  test_e2e.py  test_engine.py  test_harness.py  test_protocol.py  test_provider.py  test_skills.py  test_tools.py
